--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <!-- Ensure proper scaling on mobile devices -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>AQI & Property Depreciation Calculator</title>
+  <title>AQI on property rates</title>
   <style>
     /* Global Reset */
     * {
@@ -115,9 +115,9 @@
   </head>
 <body>
    <div class="container">
-    <h1>AQI & Property Depreciation Calculator</h1>
+    <h1>Impact of AQI on Property Rates</h1>
     <form id="aqiForm">
-      <label for="pinCode">Enter Pin Code:</label>
+      <label for="pinCode">Enter your pin code:</label>
       <input type="text" id="pinCode" name="pinCode" required>
       <input type="submit" value="Submit">
     </form>
@@ -271,7 +271,7 @@
         <p>
           <strong>Formula:</strong> Total Depreciation (%) = 0.7 × (AQI Depreciation) + 0.3 × (PM2.5 Depreciation)
         </p>
-        <p>Note: This model is simplified using publicly available data. Real-world property valuations involve many additional factors.</p>
+        <p>Note: This model is simplified using publicly available data. Real-world property valuations involve many additional factors. The intent behind this is to show how we have been sacrificing our health at the altar of unhinged growth and productivity. The world understands monetary delta, so be it.</p>
       `;
       methodologyDiv.style.display = "block";
       methodologyDiv.innerHTML = methodologyText;
