--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       font-family: Arial, sans-serif;
       margin: 0;
       padding: 20px;
-      background: url('background.png') no-repeat center center fixed;
+      background: url('Air Quality Index_Health_AQI.jpeg') no-repeat center center fixed;
       background-size: cover;
     }
 
