--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       font-family: Arial, sans-serif;
       margin: 0;
       padding: 20px;
-      background: url('DeathByAqi_Air Pollution.png') no-repeat center center fixed;
+      background: url('DeathByAqi_Air Pollution.jpg') no-repeat center center fixed;
       background-size: cover;
     }
 
@@ -291,4 +291,5 @@
   </script>
 </body>
 </html>
+
 
